candle-einops-macros/tests/ui/fail/empty-decomposition.rs
use candle_einops_macros::einops;

fn main() {
    let _ = einops!("() a -> a", ());
}
