candle-einops-macros/tests/ui/fail/empty-decomposition.stderr
error: Decomposition groups cannot be empty
 --> tests/ui/fail/empty-decomposition.rs:4:21
  |
4 |     let _ = einops!("() a -> a", ());
  |                     ^^^^^^^^^^^
